// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a simple Vimeo Video 1`] = `
<div
  className="react-plyr"
>
  <div
    data-type="vimeo"
    data-video-id="https://vimeo.com/189789787"
  />
</div>
`;

exports[`renders a simple Youtube Video 1`] = `
<div
  className="react-plyr"
>
  <div
    data-type="youtube"
    data-video-id="CDFN1VatiJA"
  />
</div>
`;
